# robots-sim

./: .gitignore  Cargo.toml  README.md
assets/models/kuka_0/: TEST.gltf  license.txt  scene.gltf
src/: elbow.rs  infotext_system.rs  lib.rs  lower_arm.rs  main.rs  robot.rs  shoulder.rs  side_panel.rs  upper_arm.rs  wrist.rs
